Fixes for IE and horizontal scroll bar.
git-svn-id: file:///home/gallir/meneame/svn/src@3614 cbe1a1ec-7179-4919-8e32-4551e8279a00

--- a/branches/version4/www/css/es/mnm.css
+++ b/branches/version4/www/css/es/mnm.css
@@ -12,7 +12,7 @@ padding: 0;
 }
 
 body {
-font-family: Arial, Helvetica, sans-serif;
+font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
 font-size: small;
 background-image: url('../../img/common/bkg-01.png');
 color: #000;
@@ -138,7 +138,7 @@ border-radius: 3px;
 #header{
 width: 100%;
 min-width: 790px;
-font-family:'Open Sans', Arial, Helvetica, sans-serif;
+font-family:'Open Sans', 'Helvetica Neue', Arial, Helvetica, sans-serif;
 }
 
 /* first header zone */
@@ -160,10 +160,14 @@ margin-left:25px;
 margin-top:4px;
 margin-right:0px;
 float:left;
-/* tip from http://www.zeldman.com/2012/03/01/replacing-the-9999px-hack-new-image-replacement/ */
+font: 0/0 serif;
+text-shadow: none;
+color: transparent;
+/* tip from http://www.zeldman.com/2012/03/01/replacing-the-9999px-hack-new-image-replacement/ 
 text-indent: 100%;
 white-space: nowrap;
 overflow: hidden;
+*/
 }
 
 /* editions logo */
@@ -238,7 +242,7 @@ color:#ff0000;
 }
 
 #header-top .usertext{
-font-family:'Open Sans Condensed', Arial, Helvetica, sans-serif;
+font-family:'Open Sans Condensed', 'Helvetica Neue', Arial, Helvetica, sans-serif;
 font-size:14px;
 color:#fff;
 margin-right:10px;
@@ -269,8 +273,10 @@ width:55px;
 margin-left:50px;
 margin-top:5px;
 margin-right:55px;
-text-indent:100%;
 float:left;
+font: 0/0 serif;
+text-shadow: none;
+color: transparent;
 }
 
 #header-center .edname{
@@ -498,11 +504,11 @@ vertical-align: middle;
 }
 
 .subheader{
-width: 100%;
+width: auto;
 margin-top: -20px;
 height:30px;
 padding-left:25px;
-font-family:'Open Sans', Arial, Helvetica, sans-serif;
+font-family:'Open Sans', 'Helvetica Neue', Arial, Helvetica, sans-serif;
 list-style-type: none;
 }
 
@@ -592,7 +598,7 @@ background: #A84504;
 position: relative;
 margin: 0 0 10px;
 padding: 1px;
-font-family: 'Open-Sans', sans-serif;
+font-family: 'Open-Sans', 'Helvetica Neue', Arial, Helvetica, sans-serif;
 font-weight: normal;
 text-align: center;
 }
@@ -605,6 +611,7 @@ position: absolute;
 bottom:-8px;
 background:  url('../../img/common/bg-header.png') no-repeat top center;
 }
+
 .sidebox h4 a, .sidebox h4 span {
 display: block;
 padding: 5px;
@@ -615,11 +622,12 @@ border: 1px solid #FFF;
 
 .sidebox h5 {
 padding: 0px;
-width: 75%;
-margin: 0 0 0 4%;
-font-size: 14px;
+margin: 0 -35px 0 50px;
+font-size: 90%;
 font-weight: normal;
+color:#03F;
 }
+
 .sidebox h5 a {
 text-decoration: none;
 }
@@ -635,13 +643,6 @@ min-height:35px;
 clear: both;
 }
 
-.sidebox h5 {
-font-size:90%;
-font-weight: normal;
-color:#03F;
-margin-left:50px;
-}
-
 .sidebox .thumbnail {
 margin:0px 0px 10px 10px;
 box-shadow: 0 0 5px rgba(0,0,0,0.5);
@@ -653,7 +654,7 @@ box-shadow: 0 0 5px rgba(0,0,0,0.5);
 float: left;
 width: 40px;
 text-align: center;
-font-family: 'Open-Sans', sans-serif;
+font-family: 'Open-Sans', 'Helvetica Neue', Arial, Helvetica, sans-serif;
 border: 1px solid #ffeed6;
 text-align: center;
 font-size: 12px;
@@ -717,11 +718,10 @@ padding: 0;
 
 .sidebox .comments li {
 clear: left;
-display:block;
+display: block;
 font-size: 90%;
 color:#039;
 margin: 0 0 10px 0;
-vertical-align: top;
 }
 
 .sidebox .comments li img {
@@ -1211,7 +1211,7 @@ left: 8px;
 width: 67px;
 height: 85px;
 border: 1px solid #ffeed6;
-font-family: 'Open Sans', sans-serif;
+font-family: 'Open Sans', 'Helvetica Neue', Arial, Helvetica, sans-serif;
 font-size: 12px;
 color: #ff6400;
 text-align: center;
